# inspirehub

./: .envrc  .gitignore  CLAUDE.md  README.md  docker-compose.yml  electron-builder.yml  jest.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
.beads/: config.yaml  issues.jsonl
.claude/agents/: codebase-analyzer.md  security-scanner.md
.claude/commands/: audit.md  bugspray-triage.md  commit.md  maintain.md  prime-proj.md
.github/workflows/: build.yml
docs/: presentation.md
python/: backend.py  update_pdf.py
python/equipment/: __init__.py  alembic.ini  api.py  database.py  models.py  schemas.py  seed.py
python/equipment/alembic/: env.py
python/equipment/tests/: __init__.py  conftest.py  test_api.py
python/price_list/: backend.py  extract_prices.py
python/price_list/tests/: __init__.py  conftest.py  test_backend.py  test_extract_prices.py  test_update_pdf.py
python/shared/: __init__.py  logging.py
scripts/: build-python.js  copy-assets.js  dev.js  inject-config.js
src/__tests__/: utils.test.ts
src/apps/bugspray/: bugspray.css  bugspray.ts  global.d.ts  index.html
src/apps/equipment/: equipment.css  equipment.ts  global.d.ts  index.html
src/apps/price-list/: bug-report-modal.ts  (+3 more)
src/main/: bug-reporter.ts  config-manager.ts  file-logger.ts  main.ts  preload.ts  python-bridge.ts  shell-logger.ts
src/renderer/: bug-report-modal.css  editor.css  global.d.ts  index.html
src/shared/: api-bootstrap.ts  logger.ts  utils.ts
src/shell/: api-bridge.ts  bug-report-modal.ts  global.d.ts  index.html  shell.css  shell.ts
(+2 files in other folders)
