[project]
name = "inspire-price-list"
version = "1.0.0"
description = "Web-based PDF price list editor for AV Inspire"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
