[project]
name = "inspirehub"
version = "1.0.0"
description = "Inspire Solutions hub - price lists, equipment, and more"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.24.0",
    # Equipment Request feature dependencies
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
